Enable refactoring Optional like Stream around .map and .filter